# noml-rust

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml  security.yml
benches/: parser_benchmarks.rs  toml_comparison.rs
docs/: API.md  CI_CD.md  NOML.md  README.md
docs/legal/: ACCEPTABLE_USE.md  CLA.md  PRIVACY_POLICY.md  TERMS_OF_USE.md  TRADEMARK-POLICY.md
examples/: README.md  advanced_comparison.rs  async_demo.rs  basic.noml  demo.rs  feature_analysis.rs  format_preservation_demo.rs  performance_positioning.rs  performance_standards.rs  read_performance.rs  realistic_usage.rs  toml_comparison.rs  toml_compatibility_test.rs  toml_syntax_test.rs
scripts/: local-ci.sh
src/: error.rs  lib.rs  macros.rs  main.rs  resolver.rs  schema.rs  serializer.rs  value.rs
src/config/: mod.rs
src/parser/: ast.rs  grammar.rs  grammar_test_completion.rs  lexer.rs  mod.rs
src/value/: mod.rs
tests/: async_tests.rs  integration_tests.rs
