[package] 
name = "noml"
version = "0.3.0"
edition = "2021"
readme  = "README.md"
license = "Apache-2.0"

documentation = "https://docs.rs/noml"
repository    = "https://github.com/noml-lang/noml-rust"
homepage      = "https://github.com/noml-lang/noml-rust"

description = "A blazing-fast configuration library for NOML (Nested Object Markup Language) with advanced features including variable interpolation, imports, schema validation, and comment preservation"
keywords = [
    "noml", 
    "config", 
    "parser", 
    "markup",
    "toml",
]
categories = [
    "config",
    "parsing", 
    "data-structures",
    "development-tools"
]
exclude = [
    ".github/",
    "benches/",
    "docs/",
    "dev/",
]

authors = [
    "James Gober <code@jamesgober.dev>"
]

[dependencies]
# Ordered map for preserving key order in tables
indexmap = "2.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
# Error handling
thiserror = "1.0"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
chrono = ["dep:chrono"]

[[bench]]
name = "parser_benchmarks"
harness = false

[profile.release]
# Maximum optimization for legendary performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
# Optimized for accurate benchmarking
opt-level = 3
lto = true
codegen-units = 1
