# ┌───¸ ┌──┐┌────────┐┌──────────┐┌──┐
# │    ╲│  ││   ┌┐   ││          ││  │
# │  ╷  ╲  ││   ││   ││  ┌┐  ┌┐  ││  │
# │  │╲    ││   ││   ││  ││  ││  ││  │ 
# │  │ ╲   ││   └┘   ││  ││  ││  ││  └────┐
# └──┘  `──┘└────────┘└──┘└──┘└──┘└───────┘
# ▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
# ╔════════════════════════════════════════╗
# ║ Nested Object Markup Language - v0.6.x ║
# ╚════════════════════════════════════════╝
# ▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░

# NOML: Rust Implementation
# ▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
[package]#▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒
name = "noml"
version = "0.9.0"

# RUST VERSION
# ═════════════════════════════════════════⬡
edition = "2021"
rust-version = "1.82"

# LICENSE AND PUBLISHING
# ═════════════════════════════════════════⬡
license = "Apache-2.0"
publish = true

# PACKAGE METADATA
# ═════════════════════════════════════════⬡
readme  = "README.md"

# DESCRIPTION
# ═════════════════════════════════════════⬡
description = "High-performance dynamic configuration language with format preservation, environment variables, native types, string interpolation, and TOML compatibility. Blazing-fast parsing at 25µs with zero-copy architecture."

# LINK (At least 1)
# ═════════════════════════════════════════⬡
homepage      = "https://github.com/noml-lang/noml-rust" # Homepage
repository    = "https://github.com/noml-lang/noml-rust" # Repository
documentation = "https://docs.rs/noml"                   # Documentation


# KEYWORDS (MIN 5, MAX 10)
#══════════════════════════════════════════⬡
keywords = [
    "config", 
    "parser", 
    "toml",
    "markup",
    "dynamic",
    "performance",
    "zero-copy",
    "environment",
]

# CATEGORIES (Max 5)
#══════════════════════════════════════════⬡
categories = [
    "config",
    "parsing", 
    "data-structures",
    "development-tools",
    "template-engine"
]

# EXCLUDE (Excludes from crates.io)
#══════════════════════════════════════════⬡
exclude = [
    ".github/",  # GitHub metadata 
    "benches/",  # Benchmarking code
    "docs/",     # Documentation
    "dev/",      # Development utilities
]

# AUTHORS (At least 1)
#══════════════════════════════════════════⬡
authors = [
    "James Gober <code@jamesgober.dev>"
]
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░



# FEATURES
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
[features]#░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
default = []                           # No default features
chrono  = ["dep:chrono"]               # Choice of datetime library
async   = ["dep:tokio", "dep:reqwest"] # Enable async features
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░



# EXAMPLES
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
#▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒
[[example]] # DEMO
name = "demo"
path = "examples/demo.rs"
#▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒
[[example]] # ASYNC DEMO
name = "async_demo"
path = "examples/async_demo.rs"
required-features = ["async"]
#▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒
[[example]] # FORMAT PRESERVATION DEMO
name = "format_preservation_demo"
path = "examples/format_preservation_demo.rs"
#▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░



# BENCHMARKS
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
[[bench]]#░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
name = "parser_benchmarks"
harness = false
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░



# DEPENDENCIES
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
[dependencies]#░░░░░░░░░░░░░░░░░░░░░░░░░░░░░

# Error handling
#══════════════════════════════════════════⬡
thiserror = "1.0"
chrono = { version = "0.4", optional = true, features = ["serde"] }

# Async runtime (optional)
#══════════════════════════════════════════⬡
tokio = { version = "1.0", features = ["fs", "io-util"], optional = true }

# Ordered map for preserving key order in tables
#══════════════════════════════════════════⬡
indexmap = "2.0"

# Serialization / Deserialization
#══════════════════════════════════════════⬡
serde = { version = "1.0.219", features = ["derive"] }

# Temporary files for testing
#══════════════════════════════════════════⬡
tempfile = "3.20.0"

# HTTP client for remote includes (optional)
#══════════════════════════════════════════⬡
reqwest = { version = "0.11", optional = true }
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░



# DEV DEPENDENCIES
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
[dev-dependencies]#░░░░░░░░░░░░░░░░░░░░░░░░░

# Testing framework
#══════════════════════════════════════════⬡
tokio-test = "0.4"

# Async test runner
#══════════════════════════════════════════⬡
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Benchmarking
#══════════════════════════════════════════⬡
criterion = { version = "0.5", features = ["html_reports"] }
toml = "0.9.7"
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░



# PROFILE [RELEASE]
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
[profile.release]#░░░░░░░░░░░░░░░░░░░░░░░░░░
opt-level = 3 # Maximum optimization for legendary performance
lto = true
codegen-units = 1
panic = "abort"
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░



# PROFILE [BENCH]
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
[profile.bench]#░░░░░░░░░░░░░░░░░░░░░░░░░░░░
opt-level = 3 # Optimized for accurate benchmarking
lto = true
codegen-units = 1
#░▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒